# rgrc

./: CHANGELOG.md  Cargo.toml  EMBED_CONFIGS_OPTIMIZATION.md  ENHANCED_REGEX_SUMMARY.md  LICENSE  Makefile  README.md  REGEX_ENHANCEMENT_ANALYSIS.md  build.rs  zsh.compl
.github/: dependabot.yml
.github/workflows/: ci.yml  deb.yml  release.yml
benches/: enhanced_regex_bench.rs
doc/: CHANGELOG.md  DEVELOPMENT.md  FAST_PATH_SPECIALIZATION.md  FAST_PATH_SUMMARY.md  RELEASE_NOTES_v0.6.1.md  rgrc.1  rgrc.1.md
etc/: rgrc.conf  zsh.compl
examples/: bench_enhanced_vs_fancy.rs  comprehensive_bench.rs  test_fancy.rs  test_lookbehind.rs  test_parse.rs
script/: df-fuzz.sh  install.sh
share/: conf.kubectl
src/: args.rs  buffer.rs  colorizer.rs  enhanced_regex.rs  grc.rs  lib.rs  main.rs  style.rs  utils.rs
tests/: build_tests.rs  cli_tests.rs  colorizer_additional.rs  colorizer_coverage.rs  colorizer_tests.rs  config_lookaround_tests.rs  enhanced_regex_coverage.rs  grc_additional.rs  grc_coverage.rs  grc_tests.rs  hybrid_regex_test.rs  lib_tests.rs  main_tests.rs  rgrv_additional.rs  rgrv_coverage.rs  version_integration.rs
