[package]
name = "rgrc"
version = "0.4.1"
edition = "2024"
license = "MIT"
description = "Rusty Generic Colouriser"
repository = "https://github.com/lazywalker/rgrc"
homepage = "https://github.com/lazywalker/rgrc"
keywords = ["cli", "grc"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
console = "^0.16.1"
lazy_static = "^1.5.0"
fancy-regex = "^0.16.2"
mimalloc = "^0.1.43"

[dev-dependencies]
tempfile = "3.0"

[features]
default = ["embed-configs"]
embed-configs = []
timetrace = []

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true

[profile.bench]
debug = 1

[profile.minimal]
inherits = "release"
opt-level = "z"
