[package]
name = "rgrc"
version = "0.4.3"
edition = "2024"
license = "MIT"
description = "Rusty Generic Colouriser"
repository = "https://github.com/lazywalker/rgrc"
homepage = "https://github.com/lazywalker/rgrc"
keywords = ["cli", "grc"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
console = "^0.16.1"
lazy_static = "^1.5.0"
fancy-regex = "^0.16.2"
mimalloc = "^0.1.43"

[dev-dependencies]
tempfile = "3.0"
regex = "1"
assert_cmd = "2"
assert_fs = "1"
predicates = "2"

[features]
default = ["embed-configs"]
embed-configs = []
timetrace = []

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true

[profile.bench]
debug = 1

[profile.minimal]
inherits = "release"
opt-level = "z"

[package.metadata.deb]
maintainer = "lazywalker <lazywalkerz@gmail.com>"
copyright = "2025, lazywalker <lazywalkerz@gmail.com>"
license-file = ["LICENSE"]
extended-description = """\
A fast, Rust-based command-line tool \
that colorizes output from other commands \
using grc/grcat-style configuration files. \
Supports embedded configs, advanced count/replace features, \
and portable packaging."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
	# `target/release` path is special and will be replaced by cargo-deb at build time
	["target/release/rgrc", "usr/bin/", "755"],
	["doc/rgrc.1.gz", "usr/share/man/man1/", "644"],
	["etc/rgrc.conf", "etc/", "644"],
	["share/conf.*", "usr/share/rgrc/", "644"],
]
