[package]
name = "rgrc"
version = "0.6.1"
edition = "2024"
license = "MIT"
description = "Rusty Generic Colouriser"
repository = "https://github.com/lazywalker/rgrc"
homepage = "https://github.com/lazywalker/rgrc"
keywords = ["cli", "grc"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
regex = "^1.12"
mimalloc = "^0.1.43"
fancy-regex = { version = "0.16", optional = true }

[dev-dependencies]
tempfile = "3.0"
criterion = "0.5"

[[bench]]
name = "enhanced_regex_bench"
harness = false

[features]
# Default features: embed configs and use EnhancedRegex for enhanced patterns
default = ["embed-configs"]
# Embed configuration files into the binary
embed-configs = []
# Enable timing trace for performance profiling
timetrace = []
# Use battle-tested fancy-regex for enhanced regex (supports backreferences, variable-length lookbehind, etc.)
# Without this feature, uses lightweight EnhancedRegex (supports fixed-length lookahead/lookbehind only)
fancy-regex = ["dep:fancy-regex"]
# Enable debug mode for rule debugging output
debug = []

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true

[profile.bench]
debug = 1

[profile.minimal]
inherits = "release"
opt-level = "z"

[[bin]]
name = "rgrc"
path = "src/main.rs"
doc = true

[[bin]]
name = "rgrv"
path = "src/bin/rgrv.rs"
doc = true

[package.metadata.deb]
maintainer = "lazywalker <lazywalkerz@gmail.com>"
copyright = "2025, lazywalker <lazywalkerz@gmail.com>"
license-file = ["LICENSE"]
extended-description = """\
A fast, Rust-based command-line tool \
that colorizes output from other commands \
using grc/grcat-style configuration files. \
Supports embedded configs, advanced count/replace features, \
and portable packaging."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
	# `target/release` path is special and will be replaced by cargo-deb at build time
	["target/release/rgrc", "usr/bin/", "755"],
	["target/release/rgrv", "usr/bin/", "755"],
	["doc/rgrc.1.gz", "usr/share/man/man1/", "644"],
	["etc/rgrc.conf", "etc/", "644"],
	["share/conf.*", "usr/share/rgrc/", "644"],
]
